# ia368w

./: README.md
APIs/CPP/: CMakeLists.txt  Export.h  HttpClient.cpp  HttpClient.h  HttpUtil.cpp  HttpUtil.h  JsonUtil.cpp  JsonUtil.h  ParserHTTP.cpp  ParserHTTP.h  PlatformNetwork.cpp  PlatformNetwork.h  StringTokenizer.cpp  StringTokenizer.h  example.cpp  restthru_api_log.properties
APIs/CPP/cmake/: FindLibJsoncpp.cmake  FindLibLog4cplus.cmake
APIs/Matlab/: http_init.m
APIs/Matlab/robot/: http_delete.m  http_get.m  http_plain.m  http_post.m  http_put.m
Atividade1/: calcmap.m  laser_part.m  mapping.m  mapping_backup.m  plotinvsensor2.m  plotinvsensor2_recursion.m
Atividade2/: Atividade_2_IA368W.doc  NormAngle.m  filtro_de_particulas.m  gerar_inicial.m  mapping.m  octave-workspace  ranking_part.m
Atividade3/: Atividade_3_IA368W.doc  FeatureDetection2.m  SplitAndMerge.m  calc_part_dist.m  filtro_de_particulas.m  final_filtro_de_informação.txt  information_filter.m  laser_part.m  octave-workspace  reamostragem.m  ~$ividade_3_IA368W.doc
Atividade4/: FeatureDetection.m  SplitAndMerge.m  ekf_slam.m  map.m  octave-workspace
